Add footer and dynamic year

--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      © <span id="year"></span> The People's Co-operation. All rights reserved.
+    </footer>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.7.2/ethers.min.js" integrity="sha512-HO1+8d8q1yNi25A94ppIqh+apMI2vlA38nSxrdbidKdvUSsfx8bVsgcuyo6edSxnl2xe50Tzw9uQWGWpZ6YG8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
