Widen hero copy and update vaulted text

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <section class="info">
         <div class="info-card">
           <h3>Vaulted & auditable</h3>
-          <p>Every minted ounce is backed by vaulted silver. Redemption requires a simple burn + ship request.</p>
+          <p>Every TPC Token minted is backed by vaulted silver. Redemption requires a simple burn + ship request.</p>
         </div>
         <div class="info-card">
           <h3>On-chain settlement</h3>
