Update pricing card copy

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
           <p>Connect Metamask, approve SLVR spend, and sign the mint tx. We never take custody of your wallet keys.</p>
         </div>
         <div class="info-card">
-          <h3>Transparent pricing</h3>
-          <p>We pull spot from multiple sources and lock a 4% premium per oz so you always see the true landed cost.</p>
+          <h3>Transparent and stable pricing</h3>
+          <p>We pull spot from multiple sources and lock a 4% premium per 1oz silver coin. Secure storage, transport and insurance are passed on at cost price (included in purchase price).</p>
         </div>
       </section>
     </main>
