--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       </div>
       <div class="nav-actions">
         <button id="refreshPrice" class="ghost">Refresh price</button>
+        <button id="newToCrypto" class="ghost">New to Crypto?</button>
         <button id="connectWallet" class="primary">Connect Wallet</button>
       </div>
     </header>
@@ -130,6 +131,36 @@
         <div class="info-card">
           <h3>Transparent and stable pricing</h3>
           <p>We pull spot from multiple sources and lock a 4% premium per 1oz silver coin. Secure storage, transport and insurance are passed on at cost price (included in purchase price).</p>
+        </div>
+      </section>
+
+      <section class="onboarding" id="onboarding">
+        <div class="onboarding-header">
+          <div>
+            <div class="label">New to crypto?</div>
+            <h2>How to fund your first TPC mint</h2>
+          </div>
+          <div class="pill muted">Guides</div>
+        </div>
+        <div class="onboarding-grid">
+          <div class="onboarding-card">
+            <h3>No KYC (Bisq)</h3>
+            <p>Use Bisq to buy BTC without KYC, then swap to ETH and bridge if needed. Steps: install Bisq, fund with cash deposit/SEPA/ACH, buy BTC, swap via a DEX/atomic swap to ETH, connect Metamask, and mint TPC.</p>
+            <ul>
+              <li>Privacy-first: no centralized account or documents.</li>
+              <li>Peer-to-peer trades with multisig and security deposits.</li>
+              <li>Expect slower trades and wider spreads; double-check network/fees when moving to ETH.</li>
+            </ul>
+          </div>
+          <div class="onboarding-card">
+            <h3>With KYC (Card/Bank)</h3>
+            <p>Use an on-ramp like MoonPay, Coinbase, or Binance to purchase ETH to your own wallet. Steps: verify account, buy ETH with card/bank, withdraw to Metamask, switch to the target network, then mint TPC.</p>
+            <ul>
+              <li>Fastest way to get funded with card or bank transfer.</li>
+              <li>Make sure to withdraw to the correct chain and your Metamask address.</li>
+              <li>Keep some ETH for gas before swapping/minting.</li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
