Add New to Crypto page and link

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
       </div>
       <div class="nav-actions">
+        <a href="new-to-crypto.html" class="nav-link">New to Crypto?</a>
         <button id="refreshPrice" class="ghost">Refresh price</button>
-        <button id="newToCrypto" class="ghost">New to Crypto?</button>
         <button id="connectWallet" class="primary">Connect Wallet</button>
       </div>
     </header>
