Remove homepage onboarding and expand New to Crypto page

--- a/new-to-crypto.html
+++ b/new-to-crypto.html
@@ -42,12 +42,13 @@
         <div class="onboarding-grid">
           <div class="onboarding-card">
             <h3>No KYC (Bisq)</h3>
-            <p>Stay pseudonymous by using Bisq (P2P, no central custody) to acquire BTC, then swap to ETH and bridge if needed.</p>
+            <p>Stay pseudonymous by using <a href="https://bisq.network" target="_blank" rel="noopener noreferrer">Bisq</a> (P2P, no central custody) to acquire BTC, then swap to ETH and bridge if needed.</p>
             <ol>
-              <li>Download Bisq from bisq.network and verify signatures.</li>
+              <li>Download Bisq from <a href="https://bisq.network/downloads/" target="_blank" rel="noopener noreferrer">bisq.network/downloads</a> and verify signatures.</li>
               <li>Fund a trade: choose a payment rail (cash deposit, SEPA/ACH, etc.) and lock the required security deposit.</li>
               <li>Buy BTC P2P; wait for confirmations and release.</li>
-              <li>Swap BTC → ETH using a non-custodial swap or DEX that supports wrapped BTC → ETH.</li>
+              <li>Swap BTC → ETH using a non-custodial swap/DEX that supports wrapped BTC → ETH (e.g., <a href="https://app.thorswap.finance/" target="_blank" rel="noopener noreferrer">ThorSwap</a> or <a href="https://app.sideshift.ai/" target="_blank" rel="noopener noreferrer">SideShift</a>—verify availability and routes).</li>
+              <li>(Optional) Bridge ETH to your target network via a reputable bridge (check your chain’s recommended bridge; examples include <a href="https://bridge.arbitrum.io/" target="_blank" rel="noopener noreferrer">Arbitrum</a>, <a href="https://bridge.optimism.io/" target="_blank" rel="noopener noreferrer">Optimism</a>).</li>
               <li>Send ETH to your Metamask address on the target network (keep some for gas).</li>
               <li>Return to the app and mint TPC.</li>
             </ol>
@@ -57,9 +58,10 @@
               <li>Keep a small gas buffer after swapping to ETH.</li>
             </ul>
           </div>
+
           <div class="onboarding-card">
             <h3>With KYC (Card/Bank On-ramps)</h3>
-            <p>Use a regulated on-ramp like MoonPay, Coinbase, or Binance to buy ETH directly to your wallet.</p>
+            <p>Use a regulated on-ramp like <a href="https://www.moonpay.com/buy/eth" target="_blank" rel="noopener noreferrer">MoonPay</a>, <a href="https://www.coinbase.com/price/ethereum" target="_blank" rel="noopener noreferrer">Coinbase</a>, or <a href="https://www.binance.com/en/price/ethereum" target="_blank" rel="noopener noreferrer">Binance</a> to buy ETH directly to your wallet.</p>
             <ol>
               <li>Create and verify your account (KYC) on the on-ramp of choice.</li>
               <li>Add a payment method (card or bank) and purchase ETH.</li>
