Improve onboarding page and header links

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
   <div class="page">
     <header class="nav">
-      <div class="logo">
+      <a class="logo" href="/index.html">
         <div class="mark">TP</div>
         <div>
           <div class="brand">The People's Co-operation</div>
           <div class="tag">Silver-backed on ERC20</div>
         </div>
-      </div>
+      </a>
       <div class="nav-actions">
-        <a href="new-to-crypto.html" class="nav-link">New to Crypto?</a>
+        <a href="/new-to-crypto/" class="nav-link">New to Crypto?</a>
         <button id="refreshPrice" class="ghost">Refresh price</button>
         <button id="connectWallet" class="primary">Connect Wallet</button>
       </div>
