--- a/new-to-crypto/index.html
+++ b/new-to-crypto/index.html
@@ -7,21 +7,21 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <div class="page">
     <header class="nav">
-      <div class="logo">
+      <a class="logo" href="/index.html">
         <div class="mark">TP</div>
         <div>
           <div class="brand">The People's Co-operation</div>
           <div class="tag">Silver-backed on ERC20</div>
         </div>
-      </div>
+      </a>
       <div class="nav-actions">
-        <a href="index.html" class="nav-link">← Back to app</a>
-        <button class="primary" onclick="location.href='index.html'">Mint with TPC</button>
+        <a href="/new-to-crypto/" class="nav-link">New to Crypto?</a>
+        <a class="ghost button-link" href="/index.html#mint">Mint with TPC</a>
       </div>
     </header>
 
@@ -57,6 +57,13 @@
               <li>Use verified binaries; double-check addresses and network fees.</li>
               <li>Keep a small gas buffer after swapping to ETH.</li>
             </ul>
+            <p class="resources-title">Useful links</p>
+            <ul class="resources">
+              <li><a href="https://bisq.network/downloads/" target="_blank" rel="noopener noreferrer">Bisq downloads</a></li>
+              <li><a href="https://docs.bisq.network/getting-started" target="_blank" rel="noopener noreferrer">Bisq getting started guide</a></li>
+              <li><a href="https://app.thorswap.finance/" target="_blank" rel="noopener noreferrer">ThorSwap</a> · <a href="https://app.sideshift.ai/" target="_blank" rel="noopener noreferrer">SideShift</a></li>
+              <li><a href="https://bridge.arbitrum.io/" target="_blank" rel="noopener noreferrer">Arbitrum bridge</a> · <a href="https://bridge.optimism.io/" target="_blank" rel="noopener noreferrer">Optimism bridge</a></li>
+            </ul>
           </div>
 
           <div class="onboarding-card">
@@ -73,6 +80,13 @@
               <li>Fastest funding, predictable pricing and support.</li>
               <li>Always match the withdrawal chain to your Metamask network.</li>
               <li>Keep transaction receipts for your records.</li>
+            </ul>
+            <p class="resources-title">Useful links</p>
+            <ul class="resources">
+              <li><a href="https://www.moonpay.com/buy/eth" target="_blank" rel="noopener noreferrer">MoonPay — Buy ETH</a></li>
+              <li><a href="https://www.coinbase.com/price/ethereum" target="_blank" rel="noopener noreferrer">Coinbase — ETH</a></li>
+              <li><a href="https://www.binance.com/en/price/ethereum" target="_blank" rel="noopener noreferrer">Binance — ETH</a></li>
+              <li><a href="https://support.metamask.io/" target="_blank" rel="noopener noreferrer">Metamask support</a></li>
             </ul>
           </div>
         </div>
