Fix link styling and onboarding header

--- a/new-to-crypto/index.html
+++ b/new-to-crypto/index.html
@@ -21,7 +21,7 @@
       </a>
       <div class="nav-actions">
         <a href="/new-to-crypto/" class="nav-link">New to Crypto?</a>
-        <a class="ghost button-link" href="/index.html#mint">Mint with TPC</a>
+        <a class="button-link primary" href="/index.html#mint">Mint with TPC</a>
       </div>
     </header>
 
