Fix logo link and clarify Metamask swap instructions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="page">
     <header class="nav">
-      <a class="logo" href="/index.html">
+      <a class="logo" href="/">
         <div class="mark">TP</div>
         <div>
           <div class="brand">The People's Co-operation</div>
