--- a/new-to-crypto/index.html
+++ b/new-to-crypto/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="page">
     <header class="nav">
-      <a class="logo" href="/index.html">
+      <a class="logo" href="/">
         <div class="mark">TP</div>
         <div>
           <div class="brand">The People's Co-operation</div>
@@ -47,7 +47,7 @@
               <li>Download Bisq from <a href="https://bisq.network/downloads/" target="_blank" rel="noopener noreferrer">bisq.network/downloads</a> and verify signatures.</li>
               <li>Fund a trade: choose a payment rail (cash deposit, SEPA/ACH, etc.) and lock the required security deposit.</li>
               <li>Buy BTC P2P; wait for confirmations and release.</li>
-              <li>Swap BTC → ETH using a non-custodial swap/DEX that supports wrapped BTC → ETH (e.g., <a href="https://app.thorswap.finance/" target="_blank" rel="noopener noreferrer">ThorSwap</a> or <a href="https://app.sideshift.ai/" target="_blank" rel="noopener noreferrer">SideShift</a>—verify availability and routes).</li>
+              <li>Swap BTC → ETH using a non-custodial option: Metamask’s built-in swap (open Metamask, tap “Swap”, select BTC source → ETH destination on the correct network) or a DEX that supports wrapped BTC → ETH (e.g., <a href="https://app.thorswap.finance/" target="_blank" rel="noopener noreferrer">ThorSwap</a> or <a href="https://app.sideshift.ai/" target="_blank" rel="noopener noreferrer">SideShift</a>—verify availability and routes).</li>
               <li>(Optional) Bridge ETH to your target network via a reputable bridge (check your chain’s recommended bridge; examples include <a href="https://bridge.arbitrum.io/" target="_blank" rel="noopener noreferrer">Arbitrum</a>, <a href="https://bridge.optimism.io/" target="_blank" rel="noopener noreferrer">Optimism</a>).</li>
               <li>Send ETH to your Metamask address on the target network (keep some for gas).</li>
               <li>Return to the app and mint TPC.</li>
