Add mint balance summary card

--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
             <div class="value">4%</div>
             <div class="sub">Fixed over spot</div>
           </div>
+          <div class="summary-item balance">
+            <div class="label">Mint balance</div>
+            <div class="value" id="mintBalance">300 oz</div>
+            <div class="sub">Available to allocate</div>
+          </div>
         </div>
 
         <div class="cta-row">
