Show mint balance in hero stats

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
             <div class="value" id="mintPrice">$--</div>
             <div class="sub">104% premium</div>
           </div>
+          <div class="stat-card highlight-card">
+            <div class="label">Mint balance</div>
+            <div class="value" id="mintBalanceTop">-- oz</div>
+            <div class="sub">Available to allocate</div>
+          </div>
           <div class="stat-card">
             <div class="label">Wallet</div>
             <div class="value" id="walletStatus">Not connected</div>
