Align mint balance styling and remove duplicate card

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="value" id="mintPrice">$--</div>
             <div class="sub">104% premium</div>
           </div>
-          <div class="stat-card highlight-card">
+          <div class="stat-card">
             <div class="label">Mint balance</div>
             <div class="value" id="mintBalanceTop">-- oz</div>
             <div class="sub">Available to allocate</div>
@@ -95,11 +95,6 @@
             <div class="label">Per oz premium</div>
             <div class="value">4%</div>
             <div class="sub">Fixed over spot</div>
-          </div>
-          <div class="summary-item balance">
-            <div class="label">Mint balance</div>
-            <div class="value" id="mintBalance">300 oz</div>
-            <div class="sub">Available to allocate</div>
           </div>
         </div>
 
