--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
           <div class="tag">Silver-backed on ERC20</div>
         </div>
       </a>
-      <div class="nav-actions">
-        <a href="/new-to-crypto/" class="nav-link">New to Crypto?</a>
-        <button id="refreshPrice" class="ghost">Refresh price</button>
-        <button id="connectWallet" class="primary">Connect Wallet</button>
-      </div>
+      <div class="nav-controls">
+        <div class="currency-toggle" role="group" aria-label="Select currency">
+          <button class="currency-btn active" data-currency="USD">USD</button>
+          <button class="currency-btn" data-currency="AUD">AUD</button>
+        </div>
+        <div class="nav-actions">
+          <a href="/new-to-crypto/" class="nav-link">New to Crypto?</a>
+          <button id="refreshPrice" class="ghost">Refresh price</button>
+          <button id="connectWallet" class="primary">Connect Wallet</button>
+        </div>
     </header>
 
     <main class="layout">
@@ -82,7 +87,7 @@
             <div class="sub">Physical silver</div>
           </div>
           <div class="summary-item">
-            <div class="label">USD value</div>
+            <div class="label" id="fiatValueLabel">USD value</div>
             <div class="value" id="usdValue">$--</div>
             <div class="sub">At mint price</div>
           </div>
