Position currency toggle beside logo

--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
 <body>
   <div class="page">
     <header class="nav">
-      <a class="logo" href="/">
-        <div class="mark">TP</div>
-        <div>
-          <div class="brand">The People's Co-operation</div>
-          <div class="tag">Silver-backed on ERC20</div>
-        </div>
-      </a>
-      <div class="nav-controls">
+      <div class="nav-left">
+        <a class="logo" href="/">
+          <div class="mark">TP</div>
+          <div>
+            <div class="brand">The People's Co-operation</div>
+            <div class="tag">Silver-backed on ERC20</div>
+          </div>
+        </a>
         <div class="currency-toggle" role="group" aria-label="Select currency">
           <button class="currency-btn active" data-currency="USD">USD</button>
           <button class="currency-btn" data-currency="AUD">AUD</button>
         </div>
-        <div class="nav-actions">
-          <a href="/new-to-crypto/" class="nav-link">New to Crypto?</a>
-          <button id="refreshPrice" class="ghost">Refresh price</button>
-          <button id="connectWallet" class="primary">Connect Wallet</button>
-        </div>
+      </div>
+      <div class="nav-actions">
+        <a href="/new-to-crypto/" class="nav-link">New to Crypto?</a>
+        <button id="refreshPrice" class="ghost">Refresh price</button>
+        <button id="connectWallet" class="primary">Connect Wallet</button>
+      </div>
     </header>
 
     <main class="layout">
