--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="page">
     <header class="nav">
-      <div class="nav-left">
+      <div class="nav-top">
         <a class="logo" href="/">
           <div class="mark">TP</div>
           <div>
@@ -24,10 +24,10 @@
           <button class="currency-btn active" data-currency="USD">USD</button>
           <button class="currency-btn" data-currency="AUD">AUD</button>
         </div>
-      </div>
-      <div class="nav-actions">
         <a href="/new-to-crypto/" class="nav-link">New to Crypto?</a>
         <button id="refreshPrice" class="ghost">Refresh price</button>
+      </div>
+      <div class="nav-actions">
         <button id="connectWallet" class="primary">Connect Wallet</button>
       </div>
     </header>
