--- a/new-to-crypto/index.html
+++ b/new-to-crypto/index.html
@@ -12,18 +12,51 @@
 <body>
   <div class="page">
     <header class="nav">
-      <a class="logo" href="/">
-        <div class="mark">TP</div>
-        <div>
-          <div class="brand">The People's Co-operation</div>
-          <div class="tag">Silver-backed on ERC20</div>
+      <div class="nav-top">
+        <a class="logo" href="/">
+          <div class="mark">TP</div>
+          <div>
+            <div class="brand">The People's Co-operation</div>
+            <div class="tag">Silver-backed on ERC20</div>
+          </div>
+        </a>
+        <div class="nav-extras">
+          <div class="currency-toggle" role="group" aria-label="Select currency">
+            <button class="currency-btn active" data-currency="USD">USD</button>
+            <button class="currency-btn" data-currency="AUD">AUD</button>
+          </div>
+          <a href="/new-to-crypto/" class="nav-link">New to Crypto?</a>
+          <button id="refreshPrice" class="ghost">Refresh price</button>
         </div>
-      </a>
+        <button id="menuToggle" class="hamburger" aria-label="Open menu" aria-expanded="false">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </div>
       <div class="nav-actions">
-        <a href="/new-to-crypto/" class="nav-link">New to Crypto?</a>
-        <a class="button-link primary" href="/#mint">Mint with TPC</a>
+        <button class="primary" onclick="window.location.href='/'">Connect Wallet</button>
       </div>
     </header>
+
+    <div class="mobile-menu" id="mobileMenu" aria-hidden="true">
+      <div class="mobile-menu-panel">
+        <button id="closeMenu" class="close-menu" aria-label="Close menu">×</button>
+        <div class="mobile-menu-group">
+          <div class="label">Currency</div>
+          <div class="currency-toggle" role="group" aria-label="Select currency (mobile)">
+            <button class="currency-btn active" data-currency="USD">USD</button>
+            <button class="currency-btn" data-currency="AUD">AUD</button>
+          </div>
+        </div>
+        <div class="mobile-menu-group">
+          <a href="/new-to-crypto/" class="nav-link">New to Crypto?</a>
+        </div>
+        <div class="mobile-menu-group">
+          <button class="ghost wide" onclick="window.location.reload()">Refresh price</button>
+        </div>
+      </div>
+    </div>
 
     <main class="layout">
       <section class="panel">
@@ -99,6 +132,42 @@
   <script>
     const yearEl = document.getElementById("year");
     if (yearEl) yearEl.textContent = new Date().getFullYear();
+
+    (function initNav() {
+      const menuToggle = document.getElementById("menuToggle");
+      const mobileMenu = document.getElementById("mobileMenu");
+      const closeMenuBtn = document.getElementById("closeMenu");
+      const currencyButtons = document.querySelectorAll(".currency-btn");
+
+      const setCurrency = (currency) => {
+        currencyButtons.forEach((btn) => btn.classList.toggle("active", btn.dataset.currency === currency));
+      };
+
+      const openMenu = () => {
+        if (!mobileMenu || !menuToggle) return;
+        mobileMenu.classList.add("open");
+        menuToggle.setAttribute("aria-expanded", "true");
+      };
+
+      const closeMenu = () => {
+        if (!mobileMenu || !menuToggle) return;
+        mobileMenu.classList.remove("open");
+        menuToggle.setAttribute("aria-expanded", "false");
+      };
+
+      if (menuToggle) menuToggle.addEventListener("click", () => (mobileMenu?.classList.contains("open") ? closeMenu() : openMenu()));
+      if (closeMenuBtn) closeMenuBtn.addEventListener("click", closeMenu);
+      if (mobileMenu) {
+        mobileMenu.addEventListener("click", (e) => {
+          if (e.target === mobileMenu) closeMenu();
+        });
+      }
+      currencyButtons.forEach((btn) =>
+        btn.addEventListener("click", () => {
+          setCurrency(btn.dataset.currency);
+        })
+      );
+    })();
   </script>
 </body>
 </html>
