--- a/new-to-crypto/index.html
+++ b/new-to-crypto/index.html
@@ -174,7 +174,7 @@
           </div>
           <div class="footer-column">
             <div class="footer-heading">Support</div>
-            <a href="mailto:support@peoplescooperation.com">support@peoplescooperation.com</a>
+            <a href="mailto:info@tpc-silver.com">info@tpc-silver.com</a>
             <a href="https://twitter.com" target="_blank" rel="noreferrer">Twitter</a>
             <a href="https://discord.com" target="_blank" rel="noreferrer">Discord</a>
           </div>
