Embed copyright inside footer shell

--- a/new-to-crypto/index.html
+++ b/new-to-crypto/index.html
@@ -152,35 +152,37 @@
 
     <footer class="footer">
       <div class="footer-shell">
-        <div class="footer-brand">
-          <div class="mark">TP</div>
-          <div>
-            <div class="brand">The People's Co-operation</div>
-            <div class="tag">Metal-backed digital assets</div>
+        <div class="footer-top">
+          <div class="footer-brand">
+            <div class="mark">TP</div>
+            <div>
+              <div class="brand">The People's Co-operation</div>
+              <div class="tag">Metal-backed digital assets</div>
+            </div>
+          </div>
+          <div class="footer-grid">
+            <div class="footer-column">
+              <div class="footer-heading">Product</div>
+              <a href="/#mintModule">Mint Silver</a>
+              <a href="/#feed">Recent Serials</a>
+              <a href="/#info">Vault Process</a>
+            </div>
+            <div class="footer-column">
+              <div class="footer-heading">Company</div>
+              <a href="/new-to-crypto/">New to Crypto?</a>
+              <a href="/terms">Terms & Conditions</a>
+              <a href="/privacy">Privacy</a>
+            </div>
+            <div class="footer-column">
+              <div class="footer-heading">Support</div>
+              <a href="mailto:info@tpc-silver.com">info@tpc-silver.com</a>
+              <a href="https://twitter.com" target="_blank" rel="noreferrer">Twitter</a>
+              <a href="https://discord.com" target="_blank" rel="noreferrer">Discord</a>
+            </div>
           </div>
         </div>
-        <div class="footer-grid">
-          <div class="footer-column">
-            <div class="footer-heading">Product</div>
-            <a href="/#mintModule">Mint Silver</a>
-            <a href="/#feed">Recent Serials</a>
-            <a href="/#info">Vault Process</a>
-          </div>
-          <div class="footer-column">
-            <div class="footer-heading">Company</div>
-            <a href="/new-to-crypto/">New to Crypto?</a>
-            <a href="/terms">Terms & Conditions</a>
-            <a href="/privacy">Privacy</a>
-          </div>
-          <div class="footer-column">
-            <div class="footer-heading">Support</div>
-            <a href="mailto:info@tpc-silver.com">info@tpc-silver.com</a>
-            <a href="https://twitter.com" target="_blank" rel="noreferrer">Twitter</a>
-            <a href="https://discord.com" target="_blank" rel="noreferrer">Discord</a>
-          </div>
-        </div>
+        <div class="footer-bottom">&copy; <span id="year"></span> The People's Co-operation. All rights reserved.</div>
       </div>
-      <div class="footer-bottom">&copy; <span id="year"></span> The People's Co-operation. All rights reserved.</div>
     </footer>
   </div>
 
